Updates with finished visualisation and test accuracy
mian.py is updated to include visualisation, testing accuracy, and some other processing

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,21 @@ dmypy.json
 .pyre/
 
 data/
+
+
+# Images (jpg, png) 
+
+images/
+*.png
+*.jpg
+
+
+# Labels (.txt)
+
+labels/
+*.txt
+
+
+# Models
+
+*.pt
