Revert "Merge branch 'master' into VirtualKITTI-detection"
This reverts commit cfeb4fb7e073055e61c6474aa42a7ba154b656f3, reversing
changes made to c4feab33a0b996bf382d83dd7e997f11b04953b4.

--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,18 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-lightning_logs/
-/data
-*.pt
-notebooks/experiments/
+data/
+
+
+# Images (jpg, png) 
+
 images/
+
+
+# Labels (.txt)
 segmentation/
+
+
+# Models
+
+*.pt
