Revert "Revert "Merge branch 'master' into VirtualKITTI-detection""
This reverts commit cc5f43eabbb71f78715c77eee865fd469cf2a2e5.

--- a/.gitignore
+++ b/.gitignore
@@ -128,18 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-data/
-
-
-# Images (jpg, png) 
-
-images/
-
-
-# Labels (.txt)
-segmentation/
-
-
-# Models
-
+lightning_logs/
+/data
 *.pt
+notebooks/experiments/
+images/
+segmentation/
